[package]
name = "align_tools"
version = "0.1.12"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/enclone_ranger"
edition = "2018"

[dependencies]
bio_edit = { path = "../bio_edit" }
debruijn = "0.3"
itertools = ">= 0.8, <= 0.11"
string_utils = { path = "../string_utils" }
vector_utils = { path = "../vector_utils" }
