[package]
name = "build_enclone_proto"
version = "0.5.219"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Alvin Liang <alvin.liang@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2021"
license-file = "LICENSE.txt"
publish = false
exclude = ["enclone.types.rs"]

[dependencies]
prost-build = ">=0.9,<0.12"

[dev-dependencies]
tempfile = "3.5"
