[package]
name = "expr_tools"
version = "0.1.3"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
repository = "https://github.com/10XGenomics/enclone_ranger"

[dependencies]

evalexpr.workspace = true
statrs.workspace = true
string_utils = { path = "../string_utils" }
vector_utils = { path = "../vector_utils" }
