[package]
name = "fasta_tools"
version = "0.1.8"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
repository = "https://github.com/10XGenomics/enclone_ranger"

[dependencies]
debruijn.workspace = true
flate2.workspace = true
io_utils = { path = "../io_utils" }
string_utils = { path = "../string_utils" }
