[package]
name = "hyperbase"
version = "0.1.8"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/enclone_ranger"
edition = "2018"

[dependencies]
debruijn.workspace = true
equiv = { path = "../equiv" }
graph_simple = { path = "../graph_simple" }
kmer_lookup = { path = "../kmer_lookup" }
petgraph.workspace = true
vector_utils = { path = "../vector_utils" }
