[package]
name = "hyperbase"
version = "0.1.8"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"
edition = "2018"

[dependencies]
debruijn = "0.3"
equiv = { path = "../equiv" }
graph_simple = { path = "../graph_simple" }
kmer_lookup = { path = "../kmer_lookup" }
petgraph = ">=0.5, <0.7"
vector_utils = { path = "../vector_utils" }
