[package]
name = "io_utils"
version = "0.3.2"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/enclone_ranger"
edition = "2018"
include = ["src/lib.rs", "LICENSE", "README.md"]

[dependencies]
bincode.workspace = true
flate2.workspace = true
lz4.workspace = true
serde.workspace = true
string_utils = { path = "../string_utils" }
