[package]
name = "kmer_lookup"
version = "0.1.5"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/enclone_ranger"
edition = "2018"

[dependencies]
debruijn.workspace = true
rayon.workspace = true
vector_utils = { path = "../vector_utils" }
