[package]
name = "perf_stats"
version = "0.1.8"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
repository = "https://github.com/10XGenomics/enclone_ranger"

[dependencies]
io_utils = { path = "../io_utils" }
libc.workspace = true
string_utils = { path = "../string_utils" }
