[workspace]

members = [
    "align_tools",
    "amino",
    "ansi_escape",
    "binary_vec_io",
    "dna",
    "equiv",
    "exons",
    "expr_tools",
    "fasta_tools",
    "graph_simple",
    "hyperbase",
    "io_utils",
    "kmer_lookup",
    "load_feature_bc",
    "mirror_sparse_matrix",
    "perf_stats",
    "pretty_trace",
    "stats_utils",
    "stirling_numbers",
    "string_utils",
    "tables",
    "vdj_ann",
    "vdj_ann_ref",
    "vdj_types",
    "vector_utils",
]

[profile.dev]
debug = 1
opt-level = 3
split-debuginfo = "unpacked"

[profile.release]
debug = 1
lto = true
codegen-units = 1
overflow-checks = true

[profile.test]
debug = 1
opt-level = 3
split-debuginfo = "unpacked"

[dependencies]
backtrace = "0.3"
bincode = "1.1.3"
bit-set = "0.5"
bio-types = ">=0.12"
debruijn = "0.3"
evalexpr = ">=7, <12"
flate2 = "1"
lazy_static = "1"
libc = "0.2"
lz4 = "1"
nix = { version = ">=0.19, <0.28", features = ["signal"] }
num-traits = "^0.2"
petgraph = ">=0.5, <0.7"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = ">=0.9.3, <0.11"
statrs = ">=0.15, <0.17"
itertools = ">= 0.8, <= 0.11"

[target.'cfg(not(windows))'.dependencies]
pprof = { version = ">=0.7, <0.14", features = ["prost-codec"], optional = true }

[features]
pprof = ["dep:pprof", "dep:io_utils", "dep:stats_utils", "dep:tables"]

[dev-dependencies]
num-bigint = "^0.4"
num-rational = "^0.4"
rand = ">=0.7.3, <0.9"
