[package]
name = "vdj_ann"
version = "0.4.4"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

# This crate is not published because it is too big.
include = ["src/**/*"]

[dependencies]
align_tools = { path = "../align_tools" }
amino = { path = "../amino" }
bio_edit = { path = "../bio_edit" }
debruijn.workspace = true
fasta_tools =  { path = "../fasta_tools" }
hyperbase = { path = "../hyperbase" }
io_utils = { path = "../io_utils" }
itertools.workspace = true
kmer_lookup = { path = "../kmer_lookup" }
serde.workspace = true
serde_json.workspace = true
stats_utils = { path = "../stats_utils" }
string_utils = { path = "../string_utils" }
vector_utils = { path = "../vector_utils" }
vdj_types = { path = "../vdj_types" }
