[package]
name = "vdj_ann"
version = "0.4.4"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/enclone_ranger"

# This crate is not published because it is too big.
include = ["src/**/*"]

[dependencies]
align_tools = { path = "../align_tools" }
amino = { path = "../amino" }
bio_edit = { path = "../bio_edit" }
debruijn = "0.3"
fasta_tools =  { version = "0.1", path = "../fasta_tools" }
hyperbase = { path = "../hyperbase" }
io_utils = { path = "../io_utils" }
itertools = ">= 0.8, <= 0.11"
kmer_lookup = { path = "../kmer_lookup" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stats_utils = { path = "../stats_utils" }
string_utils = { path = "../string_utils" }
vector_utils = { path = "../vector_utils" }
vdj_types = { path = "../vdj_types" }
