[package]
name = "vdj_ann_ref"
version = "0.2.1"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/enclone_ranger"

# This crate is not published because it is too big.
publish = false

[dependencies]
debruijn.workspace = true
exons = { path = "../exons" }
fasta_tools =  { path = "../fasta_tools" }
flate2.workspace = true
io_utils = { path = "../io_utils" }
perf_stats = { path = "../perf_stats" }
pretty_trace = { path = "../pretty_trace" }
sha2.workspace = true
string_utils = { path = "../string_utils" }
vector_utils = { path = "../vector_utils" }
vdj_ann = { path = "../vdj_ann" }
