[package]
name = "pretty_trace"
# When version is bumped, version in README.md also needs to be bumped.
version = "0.5.24"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Tools for generating pretty tracebacks and for profiling."
homepage = "https://github.com/10XGenomics/rust-toolbox/tree/master/pretty_trace"
keywords = ["stack", "trace", "traceback", "profiling"]
edition = "2018"
include = ["src/lib.rs", "LICENSE", "README.md"]
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
backtrace.workspace = true
io_utils = { path = "../io_utils", optional = true }
lazy_static.workspace = true
libc.workspace = true
nix.workspace = true
stats_utils = { path = "../stats_utils", optional = true }
string_utils = { path = "../string_utils" }
tables = { path = "../tables", optional = true }
vector_utils = { path = "../vector_utils" }

[target.'cfg(not(windows))'.dependencies]
pprof = { version = ">=0.7, <0.14", features = ["prost-codec"], optional = true }

[features]
pprof = ["dep:pprof", "dep:io_utils", "dep:stats_utils", "dep:tables"]

[dev-dependencies]
rayon.workspace = true
